--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "codemirror": "^5.49.2",
     "core-js": "^3.1.3",
     "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
+    "knockout": "^3.5.1",
     "lerna": "^3.16.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
@@ -65,6 +67,7 @@
   "dependencies": {
     "@teamwork/autocomplete-core": "file:packages/core",
     "@teamwork/autocomplete-editor-codemirror": "file:packages/editor-codemirror",
+    "@teamwork/autocomplete-ui-ko": "file:packages/ui-ko",
     "@teamwork/autocomplete-ui-vue": "file:packages/ui-vue"
   }
 }
