--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/codemirror": "^0.0.80",
-    "@types/jest": "24.0.19",
+    "@types/jest": "^24.0.23",
     "acorn": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "codemirror": "^5.49.2",
-    "core-js": "^3.1.3",
+    "core-js": "^3.4.2",
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "knockout": "^3.5.1",
-    "lerna": "^3.16.4",
+    "lerna": "^3.19.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.3",
