--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/jest": "^24.0.23",
     "acorn": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
     "codemirror": "^5.49.2",
     "core-js": "^3.4.2",
     "css-loader": "^3.2.0",
@@ -28,6 +27,7 @@
     "ts-jest": "^24.2.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.15.3",
     "typescript": "^3.5.3",
     "vue": "^2.6.10",
     "webpack": "^4.39.3",
@@ -50,10 +50,13 @@
     "tsc": "tsc -b packages/*",
     "test": "jest",
     "build": "run-s clean prettier tslint tsc test",
-    "demo": "webpack -p",
     "start": "run-p start:*",
     "start:demo": "webpack-dev-server -d --devtool=false",
-    "start:tsc": "tsc -b -w packages/*"
+    "start:tsc": "tsc -b -w packages/*",
+    "docs:clean": "rimraf docs",
+    "docs:build:demo": "webpack -p",
+    "docs:build:api": "typedoc --name '@teamwork/autocomplete-*' --excludeExternals --excludePrivate --excludeNotExported --exclude '**/*.test.ts' --out docs/api packages/*",
+    "docs": "run-s docs:clean docs:build:*"
   },
   "husky": {
     "hooks": {
