--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "docs:clean": "rimraf docs",
     "docs:build:demo": "webpack -p",
     "docs:build:api": "typedoc --name '@teamwork/autocomplete-*' --excludeExternals --excludePrivate --excludeNotExported --exclude '**/*.test.ts' --out docs/api packages/*",
+    "docs:build:nojekyll": "touch docs/.nojekyll",
     "docs": "run-s docs:clean docs:build:*"
   },
   "husky": {
