--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@types/codemirror": "^0.0.80",
     "@types/jest": "^24.0.23",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "acorn": "^7.0.0",
     "babel-loader": "^8.0.6",
     "codemirror": "^5.49.2",
