--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typedoc": "^0.15.3",
     "typescript": "^3.5.3",
     "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.3.1"
