--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
+    "ts-essentials": "^3.0.5",
     "ts-jest": "^24.2.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
@@ -75,6 +76,7 @@
   "dependencies": {
     "@teamwork/autocomplete-core": "file:packages/core",
     "@teamwork/autocomplete-editor-codemirror": "file:packages/editor-codemirror",
+    "@teamwork/autocomplete-editor-text": "file:packages/editor-text",
     "@teamwork/autocomplete-ui-ko": "file:packages/ui-ko",
     "@teamwork/autocomplete-ui-vue": "file:packages/ui-vue"
   }
