--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teamwork/autocomplete-core",
-  "version": "0.2.0",
+  "version": "1.0.0-alpha.0",
   "description": "The core autocomplete components.",
   "keywords": [
     "autocomplete"
