--- a/packages/editor-codemirror/package.json
+++ b/packages/editor-codemirror/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teamwork/autocomplete-editor-codemirror",
-  "version": "0.2.0",
+  "version": "1.0.0-alpha.0",
   "description": "The autocomplete editor adapter for CodeMirror.",
   "keywords": [
     "autocomplete editor CodeMirror"
