--- a/packages/ui-ko/package.json
+++ b/packages/ui-ko/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teamwork/autocomplete-ui-ko",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.0",
   "description": "The autocomplete UI in Knockout.",
   "keywords": [
     "autocomplete ui knockout"
