chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "@babel/preset-env": "^7.4.5",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "@types/codemirror": "^0.0.80",
+    "@syncot/events": "^0.1.0",
+    "@syncot/util": "^1.0.0",
+    "@types/codemirror": "^0.0.81",
     "@types/jest": "^24.0.23",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.30",
     "acorn": "^7.0.0",
     "babel-loader": "^8.0.6",
     "codemirror": "^5.49.2",
-    "core-js": "^3.4.2",
-    "css-loader": "^3.2.0",
+    "core-js": "^3.4.7",
+    "css-loader": "^3.2.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.4",
@@ -24,13 +26,13 @@
     "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^3.0.0",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.0.1",
     "ts-essentials": "^3.0.5",
     "ts-jest": "^24.2.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.15.3",
-    "typescript": "^3.5.3",
+    "typescript": "^3.7.3",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.3",
