--- a/packages/editor-text/package.json
+++ b/packages/editor-text/package.json
@@ -23,7 +23,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@syncot/util": "^0.1.0",
+    "@syncot/events": "^0.1.0",
     "@teamwork/autocomplete-core": "file:../core",
     "tslib": "^1.9.3"
   }
