--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@syncot/util": "^1.0.0",
     "@types/codemirror": "^0.0.81",
     "@types/jest": "^24.0.23",
+    "@types/knockout": "3.4.66",
     "@vue/test-utils": "^1.0.0-beta.30",
     "acorn": "^7.0.0",
     "babel-loader": "^8.0.6",
@@ -20,7 +21,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
-    "knockout": "^3.5.1",
+    "knockout": "3.4.1",
     "lerna": "^3.19.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
