--- a/package.json
+++ b/package.json
@@ -2,43 +2,43 @@
   "name": "@teamwork/autocomplete",
   "private": true,
   "devDependencies": {
-    "@babel/plugin-proposal-unicode-property-regex": "^7.7.0",
-    "@babel/preset-env": "^7.4.5",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@syncot/events": "^0.1.0",
-    "@syncot/util": "^1.0.0",
-    "@types/codemirror": "^0.0.81",
-    "@types/jest": "^24.0.23",
-    "@types/knockout": "3.4.66",
-    "@vue/test-utils": "^1.0.0-beta.30",
-    "acorn": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "codemirror": "^5.49.2",
-    "core-js": "^3.4.7",
-    "css-loader": "^3.2.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.4",
-    "jest": "^24.9.0",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.8.8",
+    "@babel/preset-env": "^7.9.5",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@syncot/events": "^0.1.1",
+    "@syncot/util": "^1.0.1",
+    "@types/codemirror": "^0.0.91",
+    "@types/jest": "^25.2.1",
+    "@types/knockout": "3.4.67",
+    "@vue/test-utils": "^1.0.0-beta.33",
+    "acorn": "^7.1.1",
+    "babel-loader": "^8.1.0",
+    "codemirror": "^5.52.2",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.5.2",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
     "knockout": "3.4.1",
-    "lerna": "^3.19.0",
+    "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "regenerator-runtime": "^0.13.2",
-    "rimraf": "^3.0.0",
-    "style-loader": "^1.0.1",
-    "ts-essentials": "^3.0.5",
-    "ts-jest": "^24.2.0",
-    "tslint": "^5.19.0",
+    "prettier": "^2.0.4",
+    "regenerator-runtime": "^0.13.5",
+    "rimraf": "^3.0.2",
+    "style-loader": "^1.1.4",
+    "ts-essentials": "^6.0.4",
+    "ts-jest": "^25.4.0",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.15.3",
-    "typescript": "^3.7.3",
-    "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.3.1"
+    "typedoc": "^0.17.4",
+    "typescript": "^3.8.3",
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
@@ -51,7 +51,7 @@
   },
   "scripts": {
     "clean": "rimraf packages/*/lib **/*.tsbuildinfo",
-    "prettier": "prettier --list-different 'packages/*/src/**/*' 'packages/*/*.json' '*.json' '*.MD' '.prettierrc'",
+    "prettier": "prettier --list-different 'packages/*/src/**/*' 'packages/*/*.json' '*.json' '*.md' '.prettierrc'",
     "tslint": "tslint --project .",
     "tsc": "tsc -b packages/*",
     "test": "jest",
