chore: publish packages to npm
 - @teamwork/autocomplete-core@1.1.3
 - @teamwork/autocomplete-editor-codemirror@1.0.5
 - @teamwork/autocomplete-editor-contenteditable@1.0.0
 - @teamwork/autocomplete-editor-text@1.0.5
 - @teamwork/autocomplete-ui-ko@2.0.4
 - @teamwork/autocomplete-ui-vue@1.1.5

--- a/packages/editor-contenteditable/package.json
+++ b/packages/editor-contenteditable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teamwork/autocomplete-editor-contenteditable",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "description": "The autocomplete editor adapter for elements with the contenteditable attribute.",
   "keywords": [
     "autocomplete editor contenteditable"
